# turing_machine

./: .gitignore  Cargo.toml
benches/: action_benchmark.rs  binadd.py  paren.py  repeat.py  sqrt2.py
data/: bf.tm  binadd.tm  binary.tape  brackets.tape  carry_binadd.csv  flat_parendata.csv  long_binadd.csv  nested_parendata.csv  repeat.csv  repeat.tm  simple.tm  sqrt2.csv  sqrt2.tm  test.tape  white.tape
src/: Makefile  binadd.tm  builders.rs  common.rs  deterministic_tm.rs  lib.rs  limited.rs  machine_parser.rs  machine_representation.rs  machine_representation_old.rs  main.rs  mocking.rs  paren.tm  stats.rs  transition_table.rs  turing_machine.rs  utils.rs
src/common/: mod.rs  representation.rs
src/deterministic_tm/: mod.rs  representation.rs  transition_table.rs
src/machine_representation/: compressed.rs  expanded.rs  mod.rs
src/non_deterministic_tm/: mod.rs  representation.rs  transition_table.rs
