[package]
name = "turing_machine"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
lazy_static = "1.3.0"
log = "0.4"
env_logger = "0.6.1"
hashbrown = "0.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "action_benchmark"
harness = false